# OCPP_Appliances

./: pyproject.toml  schema
app/: csms.py  dashboard.py  groups.py  main.py  metering.py  models.py  state.py
app/static/: index.html
